Updated code formatting, added javadoc